# lance-namespace

./: .gitignore  404.html  Makefile  README.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
python/lance_namespace/: pyproject.toml
python/lance_namespace/src/lance_namespace/: __init__.py  dir.py  namespace.py  rest.py
python/lance_namespace/tests/: __init__.py  test_dir.py  test_namespace.py  test_rest.py
rust/lance-catalog-reqwest-client/: Cargo.toml  README.md
rust/lance-catalog-reqwest-client/.openapi-generator/: FILES
rust/lance-catalog-reqwest-client/docs/: CreateNamespaceRequest.md  CreateNamespaceResponse.md  DefaultApi.md  ErrorModel.md  GetNamespaceResponse.md  GetTableResponse.md  ListNamespacesResponse.md  NamespaceApi.md  RegisterTableRequest.md  TableApi.md
rust/lance-catalog-reqwest-client/src/apis/: configuration.rs  default_api.rs  mod.rs  namespace_api.rs  table_api.rs
rust/lance-catalog-reqwest-client/src/models/: create_namespace_request.rs  create_namespace_response.rs  error_model.rs  error_response.rs  get_namespace_response.rs  get_table_response.rs  list_namespaces_response.rs  mod.rs  register_table_request.rs
rust/lance-namespace-reqwest-client/: Cargo.toml  README.md
rust/lance-namespace-reqwest-client/.openapi-generator/: FILES
rust/lance-namespace-reqwest-client/docs/: AlterTableAddColumnsRequest.md  AlterTableAddColumnsResponse.md  AlterTableAlterColumnsRequest.md  AlterTableAlterColumnsResponse.md  AlterTableDropColumnsRequest.md  AlterTableDropColumnsResponse.md  AlterTransactionAction.md  AlterTransactionRequest.md  AlterTransactionResponse.md  AlterTransactionSetProperty.md  AlterTransactionSetStatus.md  AlterTransactionUnsetProperty.md  AnalyzeTableQueryPlanRequest.md  AnalyzeTableQueryPlanResponse.md  BooleanQuery.md  BoostQuery.md  ColumnAlteration.md  CountRowsRequest.md  CountTableRowsRequest.md  CreateIndexRequest.md  CreateIndexResponse.md  CreateNamespaceRequest.md  CreateNamespaceResponse.md  CreateTableIndexRequest.md  CreateTableIndexResponse.md  CreateTableRequest.md  CreateTableResponse.md  CreateTableTagRequest.md  DataApi.md  DeleteFromTableRequest.md  DeleteFromTableResponse.md  DeleteTableTagRequest.md  DeregisterTableRequest.md  DeregisterTableResponse.md  DescribeNamespaceRequest.md  DescribeNamespaceResponse.md  DescribeTableIndexStatsRequest.md  DescribeTableIndexStatsResponse.md  DescribeTableRequest.md  DescribeTableRequestV2.md  (+93 more)
rust/lance-namespace-reqwest-client/src/apis/: configuration.rs  data_api.rs  index_api.rs  metadata_api.rs  mod.rs  namespace_api.rs  table_api.rs  tag_api.rs  transaction_api.rs
rust/lance-namespace-reqwest-client/src/models/: alter_table_add_columns_request.rs  alter_table_add_columns_response.rs  alter_table_alter_columns_request.rs  alter_table_alter_columns_response.rs  alter_table_drop_columns_request.rs  alter_table_drop_columns_response.rs  alter_transaction_action.rs  alter_transaction_request.rs  alter_transaction_response.rs  alter_transaction_set_property.rs  alter_transaction_set_status.rs  alter_transaction_unset_property.rs  analyze_table_query_plan_request.rs  analyze_table_query_plan_response.rs  boolean_query.rs  boost_query.rs  column_alteration.rs  count_rows_request.rs  count_table_rows_request.rs  create_index_request.rs  create_index_response.rs  create_namespace_request.rs  create_namespace_response.rs  create_table_index_request.rs  create_table_index_response.rs  create_table_request.rs  create_table_response.rs  create_table_tag_request.rs  delete_from_table_request.rs  delete_from_table_response.rs  delete_table_tag_request.rs  deregister_table_request.rs  deregister_table_response.rs  (+94 more)
(+1262 files in other folders)
